compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__type_alias__alias_cycle.snap
---
source: compiler-core/src_refactored/__core/type_/tests/type_alias.rs
assertion_line: 43
expression: "\ntype A = B\ntype B = C\ntype C = D\ntype D = E\ntype E = A\n"
snapshot_kind: text
---
----- SOURCE CODE

type A = B
type B = C
type C = D
type D = E
type E = A


----- ERROR
error: Type cycle
  ┌─ /src/one/two.gleam:2:1
  │
2 │ type A = B
  │ ^^^^^^^^^^

This type alias is defined in terms of itself.

    ┌─────┐
    │     E
    │     ↓
    │     D
    │     ↓
    │     C
    │     ↓
    │     B
    │     ↓
    │     A
    └─────┘
If we tried to compile this recursive type it would expand
forever in a loop, and we'd never get the final type.
