compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__type_alias__conflict_with_import.snap
---
source: compiler-core/src_refactored/__core/type_/tests/type_alias.rs
assertion_line: 144
expression: "import wibble.{type Wobble} type Wobble = Int"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub type Wobble = String

-- main.gleam
import wibble.{type Wobble} type Wobble = Int

----- ERROR
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:29
  │
1 │ import wibble.{type Wobble} type Wobble = Int
  │                -----------  ^^^^^^^^^^^^^^^^^ Redefined here
  │                │             
  │                First defined here

The type `Wobble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
