compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__type_alias__duplicate_variable_error_does_not_stop_analysis.snap
---
source: compiler-core/src_refactored/__core/type_/tests/type_alias.rs
assertion_line: 113
expression: "\ntype Two(a, a) =\n  #(a, a)\n\ntype UnknownType =\n  Dunno\n"
snapshot_kind: text
---
----- SOURCE CODE

type Two(a, a) =
  #(a, a)

type UnknownType =
  Dunno


----- ERROR
error: Duplicate type parameter
  ┌─ /src/one/two.gleam:2:13
  │
2 │ type Two(a, a) =
  │             ^

This definition has multiple type parameters named `a`.
Rename or remove one of them.

error: Unknown type
  ┌─ /src/one/two.gleam:6:3
  │
6 │   Dunno
  │   ^^^^^

The type `Dunno` is not defined or imported in this module.
