compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__type_alias__unused_parameter.snap
---
source: compiler-core/src_refactored/__core/type_/tests/type_alias.rs
assertion_line: 88
expression: "\ntype A(a) =\n  Int\n"
snapshot_kind: text
---
----- SOURCE CODE

type A(a) =
  Int


----- ERROR
error: Unused type parameter
  ┌─ /src/one/two.gleam:2:1
  │  
2 │ ╭ type A(a) =
3 │ │   Int
  │ ╰─────^

The type variable `a` is unused. It can be safely removed.
